<resources>
    <string name="app_name" translatable="false">parden</string>
    <string name="next">આગળ</string>
    <string name="previous">પાછળ</string>
    <string name="uq1">1. આપનું સરેરાશ માસિક/દ્રિમાસિક​ વિજ​ બીલ કેટલું આવે છે ?</string>
    <string name="ua1">"    Rs."</string>
    <string name="uq2">2. આપના બીલ માં દર્શાવેલ યુનીટ ની સંખ્યા ને આપના મીટર દ્વારા દર્શાવેલ યુનીટ ની સંખ્યા સાથે કેટલી વાર સરખાવો છો</string>
    <string name="rb1">કદાપી નહી</string>
    <string name="rb2">કોઇક વાર</string>
    <string name="rb3">હંમેશા</string>
    <string name="uq4">4.આપે આપના રહેણાંક માં કેટલા LED વિદ્યુત શક્તિ બચાવનારા બલ્બો લગાડયા છે ?  </string>
    <string name="a4rb1">એક પણ નહીં</string>
    <string name="a4rb2">એક થી ચાર</string>
    <string name="a4rb3">ચાર થી વધુ</string>
    <string name="a4rb4">ઘર ના બધા બલ્બ LED છે</string>
    <string name="uq3">3. એક વિદ્યુત સંચાલિત ઉપક્રરણો ખરીદતા પહેલા શું આપ તેને ચલાવવા પર થનાર વિદ્યુત શક્તિ ના ખર્ચ ને ધ્યાન માં લો છો ?</string>
    <string name="uq5">5.આપે ઊર્જા બચત માટે કોઈ પગલાં લીધેલ છે?</string>
    <string name="yes">હા</string>
    <string name="no">ના</string>
    <string name="uq6">6.આપના દ્વારા બિન પરંપરાગત સ્ત્રોત દ્વારા વીજ ઉત્પાદન કરવાના કોઈ સ્ત્રોત અપનાવેલ છે.(દા.ત.સોલર)</string>
    <string name="uq7">7.તમે કયારે પણ નીચે જણાવેલ માટે અરજી કરી છે   (એક કરતા વધારે વિકલ્પ પસંદ કરી શકો છો)</string>
    <string name="uq8">8.શું આપે નવા જોડાણ માટે /આપના નામ હાલના જોડાણ ની માલિકી ની તબદીલી માટે/હાલના જોડાણ ને નવી જગ્યા એ ખસેડવા/ વીજભાર બદલવા માટે કેટલો સમય લાગ્યો ?</string>
    <string name="uq9">9.આપે વીજ સલામતી માટે કોઈ પગલાં લીધેલ છે? જેમ કે ELCB,વગેરે.</string>
    <string name="uq10">10.આપ નવુ જોડાણ મેળવવા માટે ની /આ૫ ના નામ હાલ ના જોડાણ ની માલિકી ની તબદીલી માટે /હાલના જોડાણ ને નવી જગ્યા એ ખસેડવા / વીજભાર બદલવા ની અરજી કરવાની પ્રક્રિયા માં કેટલા સંતુષ્ટ છો ?</string>
    <string name="uq11">11.આપને નવા વીજ જોડાણ અંગે ઓન-લાઈન અરજી કરવાની સુવિધા અંગે આપ માહિતગાર છો કે કેમ?</string>
    <string name="uq12">12.જો હા, તો આ સુવિધા થી....</string>
    <string name="uq13">13.MGVCLનાં જનસુવિધા કેન્દ્ર અંગે માહિતગાર છો ? જનસુવિધા કેન્દ્ર થકી ,નવુ જોડાણ મેળવવા માટે ની /આપ ના નામ હાલ ના જોડાણ ની માલિકી ની તબદીલી માટે /હાલના જોડાણ ને નવી જગ્યા એ ખસેડવા / વીજભાર બદલવા ની અરજી કરવાની પ્રક્રિયા, તમામ યોજના વગેરે માહિતી મળી રહે છે ?</string>
    <string name="uq14_1">14.1 MGVCLનાં દ્વારા mobile no. રજીસ્ટર કરાવવા થી વધું સગવડતા મળી રહે તે અંગેની માહિતી છે? </string>
    <string name="uq14">14. આપે mobile no. રજીસ્ટર કરાયેલ છે?</string>
    <string name="uq15">15.છેલ્લા ત્રણ માસ માં આપ કેટલીવાર પૂર્વ જાહેરાત વગર નો /કસમય નો વિદ્યુત કાપ અનુભવ્ચો છે.</string>
    <string name="uq16">16.વીજ પ્રવાહ ને ચાલુ રાખવા માટે શું આપની પાસે કોઈ બીજી વ્યવસ્થા છે ? જેવી કે વીજ / ડીઝલ જનરેટર / યુપીએસ / ઇન્વર્ટર, વગેરે.</string>
    <string name="uq17">17.કંપની દ્વારા આપવા મા આવતા વીજ પુરવઠા ની સાતત્ય ની બાબતે આપ કેટલા સંતુષ્ટ છો</string>
    <string name="uq18">18.છેલ્લા ત્રણ માસમાં આપને મળતા વિજપુરવઠામા આપે કેટલી વાર અસ્થિરતા / વધઘટ નો અનુભવ કર્યો છે</string>
    <string name="uq19">19.વીજ પ્રવાહ ની અસ્થિરતા સામે રક્ષણ અર્થે શું આપની પાસે કોઈ વ્યવસ્થા/તજવીજ છે …… જેવી કે એમસીંબી,યુપીએસ,ઇન્વર્ટર, વગેરે ?</string>
    <string name="uq20">20.કંપની દ્વારા અપાતા વીજ પુરવઠાની ગુણવત્તા વિષે અસ્થિરતાની માત્ર અને પુનરાવર્તનની દ્રષ્ટિ એ આપ કેટલા સંતુષ્ટ છો</string>
    <string name="uq21">21.શું આપને હાલની બીલ બજાવવા ની રીત યોગ્ય લાગે છે.</string>
    <string name="uq22">22.જો તમારો જવાબ ના છે તો કેમ નહી?</string>
    <string name="uq23">23.શું આપશ્રી કોઈ વધુ સારી વૈકલ્પીક રીત સૂચવી શકશો ?</string>
    <string name="uq24">24.શું આપ સહમત થશો કે જે માળખા પ્રમાણે અત્યારે બીલ બનાવવા માં આવે છે તેમાંથી બીલ નો આખરી આંક કેવી રીતે ગણાય છે. તે સરળતા થી સમજી શકાય છે ?</string>
    <string name="uq25">25.છેલ્લા એક વર્ષમાં તમે કેટલી વાર બીલ ની ભૂલ માટે ફરિયાદ કરી છે ?</string>
    <string name="uq26">26.જો.. હા તો ફરિયાદ ના નિરાકરણ માટે આપ સંતુષ્ઠ  છો?</string>
    <string name="uq27">27.છેલ્લા એક વર્ષ માં તમે કેટલી વાર ખરાબ મીટર માટે અરજી કરી છે?</string>
    <string name="uq28">28.જો… હા તો ફરિયાદ ના નિરાકરણ માટે આપ સંતુષ્ઠ છો?</string>
    <string name="uq29">29.મીટર રીડીગ ની ચોક્કસ અને બિલીંગની પ્રક્રિયાથી આપ કેટલા સંતુષ્ટ છો ?</string>
    <string name="uq30">30.સામાન્ય રીતે  આપનું બીલ ક્યા કલેક્શન કેન્દ્ર માં ભરાઈ છે.</string>
    <string name="uq31">31.ઉપરોક્ત કલેક્શન કેન્દ્ર માં બીલ ભરવામાં કેન્દ્ર પર પહોંચ્યા પછી કેટલી વાર લાગે છે?</string>
    <string name="uq32">32.શું આપ સહમત થશો કે કલેક્શન કેન્દ્ર ખાતે જે સગવડો લભ્ય છે. જેવી કે પ્રતિક્ષાલય,સ્વરછ શોચાલય ,હવા ઉજાસ ,કાઉન્ટર નીં રચના,પીવાનું પાણી,વગેરે, તે સંતોષપ્રદ છે ?</string>
    <string name="uq33">33.શું આપ સહમત થશો કે સ્થાનિક કલેક્શન કેન્દ્ર તેના સ્થાન,બીલ ભરવાનો સમય ,વાહનો પાર્કિંગ વગેરેની દ્રષ્ટી એ અનુકુળ છે?</string>
    <string name="uq34">34.શું આપ સહમત થશો કે કલેક્શન કેન્દ્ર ખાતે સ્ટાફ વિવેકી,ગ્રાહકલક્ષી અને કાર્ય દક્ષ છે ?</string>
    <string name="uq35">35.આદર્શ પદ્ધતિ  તરીકે હું મારા બીલો આ રીતે ભરવાનું ઈચ્છીશ :  આપની પસંદગી પ્રમાણે અતિ મહત્વની (૧) થી સૌથી ઓછી મહત્વ નીં (૬) ના ક્રમ માં ગોઠવો </string>
    <string name="uq36">36.કંપની ના બીલો ભરવા માટેની પ્રક્રિયા થી આપ કેટલા સંતુષ્ટ છો ?</string>
    <string name="uq37">37.શું આપે છેલ્લા ત્રણ માસ માં કોઈ પણ પ્રકાર ની ફરિયાદ નોધાવી છે .  આપની ફરિયાદ નોધવવાનીં જુદી-જુદી સૂવીધાઓ ઊપલબ્ધ છે  જેમકે ટોલ ફી નંબર, consumer પોર્ટલ, ગુગલ  એપ, sms, ફોલ્ટ સેન્ટર, રૂબરૂ.</string>
    <string name="uq38">38.આપ જયારે કંપની ને ફરિયાદ નોધાવા માટે  કંપની ને ફોન કર્યો ત્યારે કયારે પણ આપને વ્યસ્ત સ્વર (અંગેજટોન) સામનો કરવો પડયો છે?</string>
    <string name="uq39">39.ફરિયાદો નીં નોધણી માટેનો સ્ટાફ કાર્યક્ષમ અને વિવેકી છે</string>
    <string name="uq40">40.તાકીદ ની ફરિયાદો પર ત્વરિત ધ્યાન અપાય છે બે એક કલાક માં અથવા તો તે જ દિવસે</string>
    <string name="uq41">41.જે ક્ષતીયો નું સમારકામ કર્યું છે ,તે ફરીથી ટૂંકા ગાળા મા પરાવર્તિત થતી નથી .</string>
    <string name="uq42">42.આપ શ્રી ની ફરિયાદો પર કંપની ના  પ્રતિસાદ(રિસ્પોન્સીવ નેસ) બાબતે આપ કેટલા સંતુષ્ટ છો ?</string>
    <string name="uq43">43.આપની ફરિયાદ નિવારણ અર્થે...</string>
    <string name="uq43_1">*ગ્રાહક ફરિયાદ નિવારણ સમિતિ</string>
    <string name="uq43_2">*ગ્રાહક ફરિયાદ નિવારણ ફોરમ</string>
    <string name="uq43_3">*ગ્રાહક ફરિયાદ નિવારણ ફોરમ ના હુકમ સામે વિદ્યુત લોક્પાલમાં અપીલ કરવાની જોગવાઈ અંગે માહિતગાર છો કે કેમ ?</string>
    <string name="uq44">44.છેલ્લા ત્રણ માસમાં આપે કેટલી વાર કંપની ના સ્ટાફ સાથે વ્યવહાર કર્યો છે ?</string>
    <string name="uq45">45.શું આપ સહમત છો કે કંપની ના સ્ટાફ વિવેકી  ગ્રાહકલક્ષી અને કાર્યક્ષમ છે?</string>
    <string name="uq46">46.કંપની ના સ્ટાફ ના વર્તન/વ્યવહાર ના મુદ્દે આપ કેટલા સંતુષ્ટ છો ?</string>
    <string name="uq47">47.કંપની દ્વારા  પૂરી પાડવામાં આવતી વિદ્યુત શક્તિ અને સેવાઓ ને ધ્યાન માં લેતા આપ કંપની દ્વારા  લેવામાં આવતી કીમત વિષે શું માનો છો?</string>
    <string name="uq48">48.શું આપને બીજું કોઈ વીજ પુરવઠો પૂરી પાડનાર કંપની ની કિંમતો બાબતે કોઈ માહિતી છે ?</string>
    <string name="uq49">49.જો આપનો જવાબ હા છે તો કંપની નુ નામ અને યુનિટ દીઠ ભાવ જણાવશો</string>
    <string name="uq50">50.આપ જે કિંમત ચૂકવો છો એને લક્ષ માં લેતા આપ શ્રી કંપનીં દ્વારા  અપાતા વીજ પુરવઠા અને સેવાઓ બાબતે કેટલા સંતુષ્ટ છો ?</string>
    <string name="uq51">51.શું તમને એવું લાગે છે કે છેલ્લા એક વર્ષમાં ,વીજ પુરવઠો અને તેને લગતી સેવાઓ માં સુધારો આવ્યો છે ખરો?</string>
    <string name="uq52">52.પુરતો સમય લઈને તમારા અત્યાર સુધીના કંપની સાથે ના બધાજ અનુભવોને યાદ કરીને ધ્યાન પૂર્વક જણાવો કે તમે સરવાળે ,કંપની ની વીજ  પુરવઠા ની સેવાઓ ની બાબતે કેટલા સંતુષ્ટ છો ?</string>
    <string name="uq53">53.જો આપની ઈચ્છા હોઈ કે અમે આપની કોઈ વિશિષ્ટ નોધ / ટીપ્પણી કંપની ને જણાવીએ તો કૃપયા આવી નોધોને નીચે આપેલ ખાલી જગ્યા માં લખો</string>
    <string name="uq54">54.ઉપરોક્ત તમામ સેવાઓ, સુવીધાઓ ને મૂલવવીએ તો MGVCLને ૧૦ માંથી કેટલા ગુણ આપશો ?</string>
    <string name="a7m1">અ) નવા જોડાણ માટે    </string>
    <string name="a7m2">બ) આપના નામ હાલ ના જોડાણ ની તબદીલી માટે    </string>
    <string name="a7m3">ક) હાલ ના જોડાણ તે નવા રહેઠાણમાં ખસેડવા માટે    </string>
    <string name="a7m4">ડ)વિજ ભાર (લોડ) બદલવા માટે    </string>
    <string name="a7m5">ગ) ક્યારે પણ ઉપર જણાવેલ કામ માટે અરજી કરી નથી    </string>
    <string name="a8d">દિવસો</string>
    <string name="a8m">મહિના</string>
    <string name="a8y">વર્ષ</string>
    <string name="a10rb2">અસંતુષ્ટ (અપેક્ષા કરતા ઓંછુ)</string>
    <string name="a10rb4">ખુબ સંતુષ્ટ (અપેક્ષા વધુ )</string>
    <string name="a10rb3">સંતુષ્ટ (અપેક્ષા મુજબ)</string>
    <string name="a10rb5">અતિ સંતુષ્ટ (અપેક્ષા ખુબજ વધુ)</string>
    <string name="a15rb1">એક પણ વાર નહિ</string>
    <string name="a15rb2">એક થી પાંચ વાર</string>
    <string name="a15rb3">છ થી દસ વાર</string>
    <string name="a15rb4">દસવાર થી વધુ</string>
    <string name="a18rb1">એક પણ વાર નહિ</string>
    <string name="a18rb2">નહીવત</string>
    <string name="a18rb3">કોઈક વાર</string>
    <string name="a18rb4">વારંવાર</string>
    <string name="a24rb1">ભાર પૂર્વક અસહમત</string>
    <string name="a24rb2">અસહમત</string>
    <string name="a24rb3">ન સહમત ,ન અસહમત</string>
    <string name="a24rb4">સહમત</string>
    <string name="a24rb5">ભાર પૂર્વક સહમત</string>
    <string name="a25rb1">એક પણ વાર નહી</string>
    <string name="a25rb2">એક થી ત્રણ વાર</string>
    <string name="a25rb3">ત્રણ થી વધુ વાર</string>
    <string name="a30rb1">પેટા વિભાગીય કચેરી</string>
    <string name="a30rb2">બેક</string>
    <string name="a30rb3">પોસ્ટ ઓંફીસ</string>
    <string name="a30rb4">કંપની નુ  કલેક્શન કેન્દ્ર</string>
    <string name="a30rb5">Online</string>
    <string name="a31rb1">પંદર મિનીટ થી ઓંછી</string>
    <string name="a31rb2">પંદર થી ત્રીસ મિનીટ</string>
    <string name="a31rb3">ત્રીસ મિનીટ</string>
    <string name="a31rb4">ત્રણ થી પિસ્તાલીસ મિનીટ</string>
    <string name="a31rb5">પિસ્તાલીસ મિનીટ થી વધુ</string>
    <string name="a35rb1">સ્માર્ટ કાર્ડ દ્વારા </string>
    <string name="a35rb2">24 કલાક કાર્યરત કલેક્શન કેન્દ્ર પર</string>
    <string name="a35rb3">ચેક માટે નાં ડ્રોપબોક્ષ દ્વારા </string>
    <string name="a35rb4">રજા ના દિવસે વ્યક્તિગત કલેક્શન થી</string>
    <string name="a35rb5">કમ્પ્યુટર  ઈન્ટરનેટ દ્વારા  </string>
    <string name="a35rb6">Online</string>
    <string name="a37rb1">એક પણ વાર નહિ</string>
    <string name="a37rb2">એક થી પાંચ વાર</string>
    <string name="a37rb3">પાંચ થી વધુ વાર</string>
    <string name="a47rb1">ઘણી મોંઘી</string>
    <string name="a47rb2">વ્યાજબી</string>
    <string name="a47rb3">ઘણી સસ્તી</string>
    <string name="a49_1">"   કંપની નું નામ"</string>
    <string name="a49_2">"   યુનીટ દીઠ"</string>
    <string name="a51rb1">અતિશય બગડી છે</string>
    <string name="a51rb2">કૈક અંશે બગડી છે</string>
    <string name="a51rb3">નવો બગડી છે ,ન તો સુધરી છે</string>
    <string name="a51rb4">વ્યાજબી સુધારો છે</string>
    <string name="a51rb5">અત્યત સુધારો છે</string>
    <string name="a16rb1">આવી વ્યવસ્થા છે</string>
    <string name="a16rb2">આવી વ્યવસ્થા વગેર ચલાવી શકીએ છીએ</string>
    <string name="m1">ઉપભોક્તા નું નામ :</string>
    <string name="m2">ફોન નં. : / મોબઈલ નં. :</string>
    <string name="m3">વિસ્તાર નું નામ :</string>
    <string name="m4">શહેર :</string>
    <string name="m5">ઘર માં રહેનાર વ્યક્તિ ની સંખ્યા :</string>
    <string name="m6">ગ્રાહક નંબર બિલ પરથી લખવું</string>
    <string name="m7">ગ્રાહક વિજ વપરાશ નો ટેરીફ (બિલ પરથી લખવું ):</string>
    <string name="m8">એપ્લાયન્સીંસ/ ઇક્વીપમેન્ટ (એક કરતા વધારે વિકલ્પો પસંદ કરી શકો છો)</string>
    <string name="m8_1">ટી.વી</string>
    <string name="m8_2">પાણીનો પમ્પ /મોટર</string>
    <string name="m8_3">LED</string>
    <string name="m8_4">એરકન્ડીશનર</string>
    <string name="m8_5">વોશિગ મશીન</string>
    <string name="m8_6">ટ્યુબલાઈટ </string>
    <string name="m8_7">ઘરઘંટી </string>
    <string name="m8_8">ઓવન </string>
    <string name="m8_9">કમ્પ્યુટર</string>
    <string name="m8_10">ઈલેક્ટ્રીક ગીઝર</string>
    <string name="m8_11">પંખા</string>
    <string name="m8_12">રેફ્રિજરેટર </string>
    <string name="a10rb1">અતિ અસંતુષ્ટ (અપેક્ષા કરતા ખુબજ ઓંછુ )</string>
</resources>