<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:id="@+id/l1"
    tools:context="com.example.sushant.parden.urb17">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uq49"
            android:layout_marginTop="40dp"
            android:text="@string/uq49"
            android:textSize="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/uq49"
            android:layout_marginTop="10dp"
            android:id="@+id/uq49_1"
            android:background="@drawable/shape"
            android:hint="@string/a49_1"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/a49"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/uq49_1"
            android:background="@drawable/shape"
            android:hint="@string/a49_2"
            android:inputType="number"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uq50"
            android:layout_marginTop="190dp"
            android:text="@string/uq50"
            android:textSize="15dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/uq50"
            android:orientation="vertical"
            android:background="@drawable/shape"
            android:layout_marginTop="10dp"
            android:id="@+id/urg50"
            android:layout_marginBottom="5dp"
            >
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a10rb1"
                android:id="@+id/a50rb1"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="30dp"
                android:text="@string/a10rb2"
                android:id="@+id/a50rb2"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a10rb3"
                android:id="@+id/a50rb3"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="30dp"
                android:text="@string/a10rb4"
                android:id="@+id/a50rb4"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a10rb5"
                android:id="@+id/a50rb5"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"
                />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uq51"
            android:layout_marginTop="420dp"
            android:text="@string/uq51"
            android:textSize="15dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/uq51"
            android:orientation="vertical"
            android:background="@drawable/shape"
            android:layout_marginTop="10dp"
            android:id="@+id/urg51"
            android:layout_marginBottom="5dp"
            >
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a51rb1"
                android:id="@+id/a51rb1"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="30dp"
                android:text="@string/a51rb2"
                android:id="@+id/a51rb2"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a51rb3"
                android:id="@+id/a51rb3"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="30dp"
                android:text="@string/a51rb4"
                android:id="@+id/a51rb4"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a51rb5"
                android:id="@+id/a51rb5"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"
                />
        </RadioGroup>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:id="@+id/b1"
            android:layout_marginBottom="100dp"
            android:layout_below="@id/urg51"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="50dp"
            />
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>