<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:id="@+id/l1"
    tools:context="com.example.sushant.parden.urb15">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uq43"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:text="@string/uq43"
            android:textSize="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uq43_1"
            android:layout_below="@+id/uq43"
            android:layout_marginLeft="15dp"
            android:text="@string/uq43_1"
            android:textSize="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uq43_2"
            android:layout_below="@+id/uq43_1"
            android:layout_marginLeft="15dp"
            android:text="@string/uq43_2"
            android:textSize="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uq43_3"
            android:layout_below="@+id/uq43_2"
            android:layout_marginLeft="15dp"
            android:text="@string/uq43_3"
            android:textSize="15dp"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/uq43_3"
            android:orientation="horizontal"
            android:background="@drawable/shape"
            android:layout_marginTop="10dp"
            android:id="@+id/urg43"
            android:layout_marginBottom="5dp"
            >
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/a43rb1"
                android:layout_marginLeft="30dp"
                android:layout_below="@id/uq2"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_toRightOf="@id/a43rb1"
                android:layout_marginLeft="170dp"
                android:text="@string/no"
                android:buttonTint="@color/colorPrimary"
                />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uq44"
            android:layout_marginTop="210dp"
            android:text="@string/uq44"
            android:textSize="15dp"/>.
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/uq44"
            android:orientation="vertical"
            android:background="@drawable/shape"
            android:layout_marginTop="10dp"
            android:id="@+id/urg44"
            android:layout_marginBottom="5dp"
            >
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a37rb1"
                android:id="@+id/a44rb1"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="30dp"
                android:text="@string/a37rb2"
                android:id="@+id/a44rb2"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a37rb3"
                android:id="@+id/a44rb3"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"
                />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uq45"
            android:layout_marginTop="400dp"
            android:text="@string/uq45"
            android:textSize="15dp"/>.
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/uq45"
            android:orientation="vertical"
            android:background="@drawable/shape"
            android:layout_marginTop="10dp"
            android:id="@+id/urg45"
            android:layout_marginBottom="5dp"
            >
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a24rb1"
                android:id="@+id/a45rb1"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="30dp"
                android:text="@string/a24rb2"
                android:id="@+id/a45rb2"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a24rb3"
                android:id="@+id/a45rb3"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="30dp"
                android:text="@string/a24rb4"
                android:id="@+id/a45rb4"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a24rb5"
                android:id="@+id/a45rb5"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"
                />
        </RadioGroup>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:id="@+id/b1"
            android:layout_marginBottom="100dp"
            android:layout_below="@id/urg45"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="50dp"
            />
    </RelativeLayout>
</ScrollView>
</RelativeLayout>