<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:id="@+id/l1"
    tools:context="com.example.sushant.parden.urb10">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uq30"
            android:layout_marginTop="40dp"
            android:text="@string/uq30"
            android:textSize="15dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/uq30"
            android:orientation="vertical"
            android:background="@drawable/shape"
            android:layout_marginTop="10dp"
            android:id="@+id/urg30"
            android:layout_marginBottom="5dp">

            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a30rb1"
                android:id="@+id/a30rb1"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="30dp"
                android:text="@string/a30rb2"
                android:id="@+id/a30rb2"
                android:buttonTint="@color/colorPrimary" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="30dp"
                android:text="@string/a30rb3"
                android:id="@+id/a30rb3"
                android:buttonTint="@color/colorPrimary"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="30dp"
                android:text="@string/a30rb4"
                android:id="@+id/a30rb4"
                android:buttonTint="@color/colorPrimary"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="30dp"
                android:text="@string/a30rb5"
                android:id="@+id/a30rb5"
                android:buttonTint="@color/colorPrimary"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uq31"
            android:layout_marginTop="290dp"
            android:text="@string/uq31"
            android:textSize="15dp"/>.
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/uq31"
            android:orientation="vertical"
            android:background="@drawable/shape"
            android:layout_marginTop="10dp"
            android:id="@+id/urg31"
            android:layout_marginBottom="5dp"
            >
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a31rb1"
                android:id="@+id/a31rb1"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="30dp"
                android:text="@string/a31rb2"
                android:id="@+id/a31rb2"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a31rb3"
                android:id="@+id/a31rb3"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginLeft="30dp"
                android:text="@string/a31rb4"
                android:id="@+id/a31rb4"
                android:buttonTint="@color/colorPrimary"
                />
            <RadioButton
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a31rb5"
                android:id="@+id/a31rb5"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorPrimary"
                />
        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:id="@+id/b1"
            android:layout_marginBottom="100dp"
            android:layout_below="@id/urg31"
            android:text="@string/next"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="50dp"
            />
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>